[package]
name = "tauri-todo-app"
version = "0.1.0"
description = "A Tauri Task Manager App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[features]
custom-protocol = ["tauri/custom-protocol"]